<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>kfj_ros2_talker_listener</name>
  <version>0.0.1</version>
  <description>ROS2 talker and listener</description>
  <maintainer email="csukuangfj@gmail.com">Fangjun Kuang</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>kfj_ros2_listener</depend>
  <depend>kfj_ros2_talker</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
